--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body claa="container-fluid">
-    <h1>UI-Developer</h1>
-    <p>My skills :  HTML , CSS, Bootstrap....</p>
-    <img src="public/images/a1.jpg" width="300" height="300">
+    <h2>Rohit Patil</h2>
+    <p>A Computer Science Student</p>
+     97,Nimandad,Burhanpur,Madhya Pradesh
+    <div>
+        <span class="bi bi-envelope-open">  rohitpatil15121998@gmail.com</span>
+        <span class="bi bi-github"></span>
+    </div>
 </body>
 </html>
