--- a/public/sweetshop.html
+++ b/public/sweetshop.html
@@ -25,6 +25,15 @@
                 height: 600px;
                 display:flex;
             }
+            .women-fashion:hover {
+                opacity: 1;
+            }
+            .men-fashion:hover {
+                opacity: 1;
+            }
+            .cart-couple:hover {
+                opacity: 1;
+            }
             article{
                 background-color:black;
                 color:white;
@@ -40,7 +49,7 @@
             }
         footer{
         display:grid;
-        grid-template-columns:2.4fr 2.4fr 2.4fr 2.4fr 2.4fr;
+        grid-template-columns:3fr 3fr 3fr 3fr;
         padding:30px;
         background-color:black;
         color:white;
