--- a/groom.html
+++ b/groom.html
@@ -98,7 +98,8 @@
             color:black;
            }
            .offers{
-            color:rgb(43, 167, 216);
+            color:red;
+            font-size:20px
            }
            .card2{
                 background-image: url("public/images/groom14.jpg");
@@ -346,7 +347,7 @@
                 <div>
                     <div class="card-subtitle">Groom Wear</div>
                     <div class="card-title">North Indian</div>
-                    <div class="card-prise">&#8377<strike><i>6599</i></strike><h3>&#8377 5599</h3><span class="offers">10% OFF</span></div>
+                    <div class="card-prise">&#8377<strike><i>6599</i></strike><h3>&#8377 5609 <span class="offers">15% OFF</span></h3></div>
                 </div>
             </div>
             <div>
