--- a/groomaccessories.html
+++ b/groomaccessories.html
@@ -99,7 +99,8 @@
             color:black;
            }
            .offers{
-            color:rgb(43, 167, 216);
+            color:red;
+            font-size:20px;
            }
            .card2{
                 background-image: url("public/images/groom-brooch1.jpg");
@@ -264,7 +265,7 @@
                 <div>
                     <div class="card-subtitle">Groom</div>
                     <div class="card-title">Moti Mala</div>
-                    <div class="card-prise">&#8377<strike><i>6599</i></strike><h3>&#8377 5599</h3><span class="offers">10% OFF</span></div>
+                    <div class="card-prise">&#8377<strike><i>6599</i></strike><h3>&#8377 5807 <span class="offers">12% OFF</span></h3></div>
                 </div>
             </div>
             <div>
