--- a/grooms.html
+++ b/grooms.html
@@ -96,7 +96,8 @@
          color:black;
      }
       .offers{
-         color:rgb(43, 167, 216);
+         color:red;
+         font-size:20px;
      }
      .card2{
                 background-image: url("public/images/gujratigroom.jpg");
@@ -428,7 +429,7 @@
                 <div>
                     <div class="card-subtitle">Groom Wear</div>
                     <div class="card-title">North Indian</div>
-                    <div class="card-prise">&#8377<strike><i>6599</i></strike><h3>&#8377 5599</h3><span class="offers">10% OFF</span></div>
+                    <div class="card-prise">&#8377<strike><i>6899</i></strike><h3>&#8377 5657</h3><span class="offers">18% OFF</span></div>
                 </div>
             </div>
             <div>
