--- a/southcouples.html
+++ b/southcouples.html
@@ -339,7 +339,7 @@
                 <div>
                     <div class="card-subtitle">Couple Wear</div>
                     <div class="card-title">South Indian</div>
-                    <div class="card-prise">&#8377 6599</div>
+                    <div class="card-prise">&#8377 76599</div>
                 </div>
             </div>
             <div>
@@ -356,8 +356,8 @@
                         </div>
                         <div>
                             <div class="card-subtitle">Couple Wear</div>
-                            <div class="card-title">Soth Indian</div>
-                            <div class="card-prise">&#8377 3499</div>
+                            <div class="card-title">South Indian</div>
+                            <div class="card-prise">&#8377 63499</div>
                         </div>
                     </div>
                     <div>
@@ -375,7 +375,7 @@
                                 <div>
                                     <div class="card-subtitle">Couple Wear</div>
                                     <div class="card-title">South Indian</div>
-                                    <div class="card-prise">&#8377 5999</div>
+                                    <div class="card-prise">&#8377 95999</div>
                                 </div>
                             </div>
                             <div>
@@ -393,7 +393,7 @@
                                         <div>
                                             <div class="card-subtitle">Couple Wear</div>
                                             <div class="card-title">South Indian</div>
-                                            <div class="card-prise">&#8377 6999</div>
+                                            <div class="card-prise">&#8377 66999</div>
                                         </div>
                                     </div>
 </body>
