--- a/bhartiyalogin.html
+++ b/bhartiyalogin.html
@@ -103,7 +103,7 @@
                 <span>Email (optional)</span> <br><input type="text" placeholder="Enter email address">
             </div>
             <div>
-                <span>Password</span> <br><input type="text" placeholder="At least 6 chachters">
+                <span>Password</span> <br><input type="password" placeholder="At least 6 chachters">
             </div><br>
             <p><a href="#"><i class="bi bi-info"></i></a></i>Passwords must be at least 6 characters.</p>
             <div class="para">To verify your number, we will send you a text<br> message with a temporary code. Message and<br>data rates may apply.</div>
