--- a/brideaccessories.html
+++ b/brideaccessories.html
@@ -99,7 +99,8 @@
             color:black;
            }
            .offers{
-            color:rgb(43, 167, 216);
+            color:red;
+            font-size:20px;
            }
            .card2{
                 background-image: url("public/images/bridejewellary10.jpg");
@@ -264,7 +265,7 @@
                 <div>
                     <div class="card-subtitle">Bride Jewellery</div>
                     <div class="card-title">Rajastani</div>
-                    <div class="card-prise">&#8377<strike><i>6599</i></strike><h3>&#8377 5599</h3><span class="offers">10% OFF</span></div>
+                    <div class="card-prise">&#8377<strike><i>66599</i></strike><h3>&#8377 59939 <span class="offers">10% OFF</span></h3></div>
                 </div>
             </div>
             <div>
@@ -282,7 +283,7 @@
                         <div>
                             <div class="card-subtitle">Bride Jewellery</div>
                             <div class="card-title">Gujrati</div>
-                            <div class="card-prise">&#8377 33499</div>
+                            <div class="card-prise">&#8377 73499</div>
                         </div>
                     </div>
                     <div>
