--- a/brides.html
+++ b/brides.html
@@ -321,9 +321,17 @@
                color:#ff6f61;
                margin-left: 5px;
            }
+           a{
+            text-decoration:none;
+            background-color:lightgreen;
+            color:black;
+            border-radius: 50px;
+            padding:15px;
+          }
     </style>
 </head>
-<body>
+<body class="container-fluid">
+   <section>
     <div>
         <div class="part1">
             <div class="container">
@@ -396,5 +404,8 @@
                                             <div class="card-prise">&#8377 6999</div>
                                         </div>
                                     </div>
+                                 </section>
+                                    <footer><a link="nav-link" href="bhartiyaculture.html"><span class="bi bi-arrow-left-circle-fill">    Home</span></a></footer>
+
 </body>
 </html>
