--- a/couples.html
+++ b/couples.html
@@ -18,7 +18,7 @@
                 margin-left: 50px;
                 margin-right: 50px;
              }
-             .card1{
+            .card1{
                 background-image: url("public/images/marathicouple1.jpg");
                 background-size: cover;
                 height: 350px;
@@ -321,80 +321,91 @@
                color:#ff6f61;
                margin-left: 5px;
            }
+           a{
+            text-decoration:noe;
+            background-color: lightskyblue;
+            padding:25px;
+            border-radius: 15px;
+            color:black;
+           }
     </style>
 </head>
-<body>
-    <div>
-        <div class="part1">
-            <div class="container">
-                <div class="card1">
-                    <div class="buttons">
-                        <span class="bi bi-eye"></span>
-                        <span class="bi bi-cart3"></span>
-                        <span class="bi bi-heart"></span>
-                    </div>
-                    <div id="new">
-                        New</div>
-                </div>
-                <div>
-                    <div class="card-subtitle">Couple Wear</div>
-                    <div class="card-title">Marathi</div>
-                    <div class="card-prise">&#8377 45999</div>
-                </div>
-            </div>
-            <div>
-                <div class="part1">
-                    <div class="container">
-                        <div class="card2">
-                            <div class="buttons">
-                                <span class="bi bi-eye"></span>
-                                <span class="bi bi-cart3"></span>
-                                <span class="bi bi-heart"></span>
-                            </div>
-                            <div id="new">
-                                New</div>
-                        </div>
-                        <div>
-                            <div class="card-subtitle">Couples Wear</div>
-                            <div class="card-title">South Indian</div>
-                            <div class="card-prise">&#8377 60999</div>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="part3">
-                            <div class="container">
-                                <div class="card3">
-                                    <div class="buttons">
-                                        <span class="bi bi-eye"></span>
-                                        <span class="bi bi-cart3"></span>
-                                        <span class="bi bi-heart"></span>
-                                    </div>
-                                    <div id="new">
-                                        New</div>
-                                </div>
+<body class="container-fluid">
+<section>
    <div>
-    <div class="card-subtitle">Couple Wear</div>
-    <div class="card-title">Rajastani</div>
-    <div class="card-prise">&#8377 45999</div>
-    </div>
-    </div>
-    <div>
-    <div class="part4">
-    <div class="container">
-    <div class="card4">
-    <div class="buttons">
-    <span class="bi bi-eye"></span>
-     <span class="bi bi-cart3"></span>
-     <span class="bi bi-heart"></span>
-     </div>
-      <div id="new">
-        New</div>
-   </div>
-  <div>
-    <div class="card-subtitle">Couples Wear</div>
-      <div class="card-title">Gujrati</div>
-       <div class="card-prise">&#8377 60999</div>
-     </div>
+      <div class="part1">
+          <div class="container">
+              <div class="card1">
+                  <div class="buttons">
+                      <span class="bi bi-eye"></span>
+                      <span class="bi bi-cart3"></span>
+                      <span class="bi bi-heart"></span>
+                  </div>
+                  <div id="new">
+                      New</div>
+              </div>
+              <div>
+                  <div class="card-subtitle">Couple Wear</div>
+                  <div class="card-title">Marathi</div>
+                  <div class="card-prise">&#8377 45999</div>
+              </div>
+          </div>
+          <div>
+              <div class="part1">
+                  <div class="container">
+                      <div class="card2">
+                          <div class="buttons">
+                              <span class="bi bi-eye"></span>
+                              <span class="bi bi-cart3"></span>
+                              <span class="bi bi-heart"></span>
+                          </div>
+                          <div id="new">
+                              New</div>
+                      </div>
+                      <div>
+                          <div class="card-subtitle">Couples Wear</div>
+                          <div class="card-title">South Indian</div>
+                          <div class="card-prise">&#8377 60999</div>
+                      </div>
+                  </div>
+                  <div>
+                      <div class="part3">
+                          <div class="container">
+                              <div class="card3">
+                                  <div class="buttons">
+                                      <span class="bi bi-eye"></span>
+                                      <span class="bi bi-cart3"></span>
+                                      <span class="bi bi-heart"></span>
+                                  </div>
+                                  <div id="new">
+                                      New</div>
+                              </div>
+ <div>
+  <div class="card-subtitle">Couple Wear</div>
+  <div class="card-title">Rajastani</div>
+  <div class="card-prise">&#8377 45999</div>
   </div>
+  </div>
+  <div>
+  <div class="part4">
+  <div class="container">
+  <div class="card4">
+  <div class="buttons">
+  <span class="bi bi-eye"></span>
+   <span class="bi bi-cart3"></span>
+   <span class="bi bi-heart"></span>
+   </div>
+    <div id="new">
+      New</div>
+ </div>
+<div>
+  <div class="card-subtitle">Couples Wear</div>
+    <div class="card-title">Gujrati</div>
+     <div class="card-prise">&#8377 60999</div>
+   </div>
+</div>
+</section>
+  <footer><a href="bhartiyaculture.html">Home <span class="bi bi-arrow-left-circle-fill"></span></a>
+</footer>
 </body>
 </html>
