--- a/groom.html
+++ b/groom.html
@@ -329,80 +329,92 @@
                color:#ff6f61;
                margin-left: 5px;
            }
+           a{
+            text-decoration: none;
+            color:white;
+            border-radius:50px;
+            background-color: purple;
+            padding:20px;
+           }
     </style>
 </head>
 <body class="container-fluid">
-    <div>
-        <div class="part1">
-            <div class="container">
-                <div class="card1">
-                    <div class="buttons">
-                        <span class="bi bi-eye"></span>
-                        <span class="bi bi-cart3"></span>
-                        <span class="bi bi-heart"></span>
-                    </div>
-                    <div id="new">
-                        New</div>
-                </div>
-                <div>
-                    <div class="card-subtitle">Groom Wear</div>
-                    <div class="card-title">North Indian</div>
-                    <div class="card-prise">&#8377<strike><i>6599</i></strike><h3>&#8377 5609 <span class="offers">15% OFF</span></h3></div>
-                </div>
-            </div>
-            <div>
-                <div class="part1">
-                    <div class="container">
-                        <div class="card2">
-                            <div class="buttons">
-                                <span class="bi bi-eye"></span>
-                                <span class="bi bi-cart3"></span>
-                                <span class="bi bi-heart"></span>
-                            </div>
-                            <div id="new">
-                                New</div>
-                        </div>
-                        <div>
-                            <div class="card-subtitle">Groom Wear</div>
-                            <div class="card-title">Gujrati</div>
-                            <div class="card-prise">&#8377 33499</div>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="part3">
-                            <div class="container">
-                                <div class="card3">
-                                    <div class="buttons">
-                                        <span class="bi bi-eye"></span>
-                                        <span class="bi bi-cart3"></span>
-                                        <span class="bi bi-heart"></span>
-                                    </div>
-                                    <div id="new">
-                                        New</div>
-                                </div>
-                                <div>
-                                    <div class="card-subtitle">Groom Wear</div>
-                                    <div class="card-title">North Indian</div>
-                                    <div class="card-prise">&#8377 45999</div>
-                                </div>
-                            </div>
-                            <div>
-                                <div class="part4">
-                                    <div class="container">
-                                        <div class="card4">
-                                            <div class="buttons">
-                                                <span class="bi bi-eye"></span>
-                                                <span class="bi bi-cart3"></span>
-                                                <span class="bi bi-heart"></span>
-                                            </div>
-                                            <div id="new">
-                                                New</div>
-                                        </div>
-                                        <div>
-                                            <div class="card-subtitle">Groom Wear</div>
-                                            <div class="card-title">Peshwa/Marathi</div>
-                                            <div class="card-prise">&#8377 8999</div>
-                                        </div>
-                                    </div>
+   <section>
+      <div>
+         <div class="part1">
+             <div class="container">
+                 <div class="card1">
+                     <div class="buttons">
+                         <span class="bi bi-eye"></span>
+                         <span class="bi bi-cart3"></span>
+                         <span class="bi bi-heart"></span>
+                     </div>
+                     <div id="new">
+                         New</div>
+                 </div>
+                 <div>
+                     <div class="card-subtitle">Groom Wear</div>
+                     <div class="card-title">North Indian</div>
+                     <div class="card-prise">&#8377<strike><i>6599</i></strike><h3>&#8377 5609 <span class="offers">15% OFF</span></h3></div>
+                 </div>
+             </div>
+             <div>
+                 <div class="part1">
+                     <div class="container">
+                         <div class="card2">
+                             <div class="buttons">
+                                 <span class="bi bi-eye"></span>
+                                 <span class="bi bi-cart3"></span>
+                                 <span class="bi bi-heart"></span>
+                             </div>
+                             <div id="new">
+                                 New</div>
+                         </div>
+                         <div>
+                             <div class="card-subtitle">Groom Wear</div>
+                             <div class="card-title">Gujrati</div>
+                             <div class="card-prise">&#8377 33499</div>
+                         </div>
+                     </div>
+                     <div>
+                         <div class="part3">
+                             <div class="container">
+                                 <div class="card3">
+                                     <div class="buttons">
+                                         <span class="bi bi-eye"></span>
+                                         <span class="bi bi-cart3"></span>
+                                         <span class="bi bi-heart"></span>
+                                     </div>
+                                     <div id="new">
+                                         New</div>
+                                 </div>
+                                 <div>
+                                     <div class="card-subtitle">Groom Wear</div>
+                                     <div class="card-title">North Indian</div>
+                                     <div class="card-prise">&#8377 45999</div>
+                                 </div>
+                             </div>
+                             <div>
+                                 <div class="part4">
+                                     <div class="container">
+                                         <div class="card4">
+                                             <div class="buttons">
+                                                 <span class="bi bi-eye"></span>
+                                                 <span class="bi bi-cart3"></span>
+                                                 <span class="bi bi-heart"></span>
+                                             </div>
+                                             <div id="new">
+                                                 New</div>
+                                         </div>
+                                         <div>
+                                             <div class="card-subtitle">Groom Wear</div>
+                                             <div class="card-title">Peshwa/Marathi</div>
+                                             <div class="card-prise">&#8377 8999</div>
+                                         </div>
+                                     </div>
+   </section>
+   <footer>
+      <a href="bhartiyaculture.html" <span class="bi bi-arrow-left-circle-fill"> Home</span></a>
+   </footer>
 </body>
 </html>
