--- a/southcouples.html
+++ b/southcouples.html
@@ -323,7 +323,7 @@
            }
     </style>
 </head>
-<body>
+<body class="container-fluid">
     <div>
         <div class="part1">
             <div class="container">
