--- a/bhartiyaculture.html
+++ b/bhartiyaculture.html
@@ -9,7 +9,13 @@
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<Style>
+<style>
+   @media only screen and (min-width: 600px)
+    {
+   body{
+    flex-wrap:wrap;
+   }
+   }
 header
  {
     font-size: 22px;
@@ -41,9 +47,9 @@ nav span
     border-radius: 30px;
     background-color: red;
     color:white;
-    width: 10px;
-    height: 10px;
-    font-size: 8px;
+    width: 20px;
+    height: 20px;
+    font-size: 12px;
     position: absolute;
     top: -12px;
     right: -12px;
@@ -88,6 +94,7 @@ main
     display: flex;
     justify-content: center;
     align-items: center;  
+    opacity: 1;
  }
 .Groom-fashion
  {
@@ -96,6 +103,7 @@ main
     display: flex;
     justify-content: center;
     align-items: center;
+    opacity: 1;
  } 
 .Couples-fashion
  {
@@ -104,6 +112,7 @@ main
     display: flex;
     justify-content: center;
     align-items: center;
+    opacity:1;
  }
 .cart-name
  {
@@ -152,7 +161,7 @@ button
 .text3
  {
     margin-bottom: 50px;
-    color: red;
+    color:red;
     font-weight: bold;
     font-size:25px;
  }
@@ -328,6 +337,7 @@ a
  }
 .card01-button
  {
+    
     margin-top:60px;
     margin-right:850px;
     color:black;
@@ -644,7 +654,7 @@ a
                font-size: 30px;
                font-weight: bold;
                margin-left: 600px;
-               padding: 100px;
+               padding: 150px;
                width: 500px;
            }
            .part5-button{
@@ -952,6 +962,7 @@ a
                 margin-bottom: 10px;
             }
         </Style>
+        
 <body class="container-fluid">
     <header>
         <div>
@@ -973,7 +984,7 @@ a
                 <span class="bi bi-search"></span>
                 <span class="bi bi-person"></span>
                 <span class="bi bi-heart"></span>
-                <span class="bi bi-cart3"><span class="cart-count">1</span></span>
+                <span class="bi bi-cart3"><span class="cart-count">5</span></span>
             </nav>
         </div>
     </header>
@@ -984,7 +995,7 @@ a
         <span class="bi bi-lightning-fill"></span>
        </marquee>
     </article>
-    <section>
+<section>
         <main>
             <div class="women-fashion">
                 <div class="cart">
@@ -1148,7 +1159,7 @@ a
                     </div>
                     <div>
                         <div class="card-subtitle">groom Wear</div>
-                        <div class="card-title">Peshwa(Marathi)</div>
+                        <div class="card-title">Peshwa</div>
                         <div class="card-prise">&#8377 7999</div>
                     </div>
                 </div>
@@ -1187,10 +1198,10 @@ a
             </div>
         </div>
         <div class="discover">
-            <a href="#discover"><u>Discover more</u></a>
+            <a href="#discover"><u>Discover Groom's More Designer Clothes</u></a>
         </div>
         <div class="part5">
-            <div class="part5-title">Get -80% from Top Brand Collection's</div>
+            <marquee><div class="part5-title">Get -80% from Top Brand Collection's</div></marquee>
              <a class="nav-link" href="grooms.html"><button class="part5-button">Shop Now &nbsp;&nbsp;<span class="bi bi-arrow-right"></span></button></a>
             </div>
         </div>
@@ -1272,7 +1283,7 @@ a
 
                 </div>
                 <div class="card-footer">
-                    <div>30% off offer sale end 30 days </div>
+                    <div>36% off offer sale end 30 days </div>
                 </div>
 
             </div>
