--- a/bhartiyalogin.html
+++ b/bhartiyalogin.html
@@ -28,7 +28,7 @@
         input{
             width: 100%;
             height: 32px;
-+            border-radius: 2px;
++           border-radius: 2px;
             border: 1px solid gray;margin-bottom: 17px;margin-top: 4px;
         }
         button{
@@ -49,7 +49,7 @@
             width: 72%;
         }
         a{
-            font-size: px;
+           
             text-decoration: none;
         }
         p{
@@ -80,30 +80,36 @@
             font-size: 12px;
             margin-left: 44%;
         }
-        #ccode{
-            height: 34px;
+        #ccode
+        {
+        height: 32px;
         }
     </style>
 </head>
-<body>
+<body class="container-fluid">
     <div class="image">
     </div>
     <div class="main">
         <form>
-            <h3>भारतीय CULTURE</h3>
+            <h3>Create account</h3>
             <div>
-                <span>Your Name</span> <br><input type="text" placeholder="First and last name">
+                <span>Your Name</span><br><input type="text" required placeholder="First and last name">
             </div>
             <div>
                 <span>Mobile number</span><br>
-                <select name="ccode" id="ccode"><option>IN +91</option><option>AUS +61</option><option>IN +91</option></select>
+                <select name="ccode" id="ccode">
+                    <option>India+91</option>
+                    <option>Fiji +679</option>
+                    <option>Iran +98</option>
+                    <option>Italy +39</option>
+                </select>
                 <input type="text" placeholder="Mobile number" class="num">
             </div>
             <div>
-                <span>Email (optional)</span> <br><input type="text" placeholder="Enter email address">
+                <span>Email (optional)</span> <br><input type="text" required placeholder="Enter email address">
             </div>
             <div>
-                <span>Password</span> <br><input type="password" placeholder="At least 6 chachters">
+                <span>Password</span> <br><input type="password" required placeholder="At least 6 chachters">
             </div><br>
             <p><a href="#"><i class="bi bi-info"></i></a></i>Passwords must be at least 6 characters.</p>
             <div class="para">To verify your number, we will send you a text<br> message with a temporary code. Message and<br>data rates may apply.</div>
