--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div class="address-content">
             <p><span class="title-color fw-bold">Address :</span> Nimandad,Khaknar,Burhanpur,Madhya Pradesh</p>
-            <p style="text-align:right;"><span class="title-color fw-bold">Ph.No :</span ><a claas="nav-link" href="https://wa.me/8517809277"> 8517809277</a></p>
+            <p style="text-align:right;"><span class="title-color fw-bold">Ph.No :</span ><a claas="nav-link" href="//wa.me/8517809277"> 8517809277</a></p>
             <div style="text-align:right">
                 <span class="title-color fw-bold">Gmail ID: <a class="fw-normal" href="rohitpatil15121998@gmail.com">rohitpatil15121998@gmail.com</a><br></span>
                 <span class="text-dark">Portfolio:<a class="fw-normal" href="https://rohit-patil15.github.io/ui-portfolio/">https://rohit-patil15.github.io/ui-portfolio/</a></span>
@@ -162,8 +162,8 @@
                 
                 <div class="ms-5">
                     <span style="color:rgb(42, 104, 197); font-size:14px;">Technology Used :</span>
-                    <p class="ps-4">frontend : HTML, CSS, BOOTSTRAP</p>
-                    <span style="color:blue; font-size:14px;">My Projets :</span>
+                    <p class="ps-4">Frontend : HTML, CSS, BOOTSTRAP</p>
+                    <span style="color:blue; font-size:14px;">Personal Project : </span></span>
               <a class="nav-link" href="bhartiyalogin.html"><li>Login</li></a>
               <a class="nav-link" href="bhartiyaculture.html"><li>Bharatiya Culture</li></a>
                 </div>   
@@ -181,7 +181,7 @@
             <div>
                 <h6 class="education-head">DIPLOMA (COMPUTER SCIENCE & ENGINEERING)</h6>
                 <ul>
-                    <li><b>College Name :</b> Thakur shivkumarsingh Memorial Group of Institutions</li>
+                    <li><b>College Name :</b> Thakur Shivkumarsingh Memorial Group of Institutions</li>
                     <li><b>Passing Year :</b> 2020</li>
                     <li><b>Marks obtained :</b> CGPA-7.5</li>
                     <li>Burhanpur,Dist-Burhanpur,Madhya Pradesh</li>
