--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             box-shadow: 5px 5px 5px gray;
             margin-top: 30px;
             margin-bottom: 30px;
+            width: 100vh;
         }
 
         .header {
@@ -162,7 +163,7 @@
                     <span class="bi bi-star-half"></span>
                 </p>
             </div>
-            
+
         </div>
         <div class="about-me p-3">
             <div>
