--- a/bhartiyalogin.html
+++ b/bhartiyalogin.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>भारतीय CULTURE</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-   <style>
-        .image{
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <style>
+        .image {
             background-image: url("public/images/bhartiyaculturesymbol1.jpg");
             background-size: 450px;
-            width:480px;
-            height:150px;
-            margin-left:620px;
-            border-image-repeat:no-repeat;
+            width: 480px;
+            height: 150px;
+            margin-left: 620px;
+            border-image-repeat: no-repeat;
         }
-        .main{
+
+        .main {
             margin: 20px 0px 0px 40%;
             font-size: 13px;
             font-family: arial;
@@ -25,50 +30,63 @@
             width: 25%;
             border-radius: 5px;
         }
-        input{
+
+        input {
             width: 100%;
             height: 32px;
-+           border-radius: 2px;
-            border: 1px solid gray;margin-bottom: 17px;margin-top: 4px;
+            +border-radius: 2px;
+            border: 1px solid gray;
+            margin-bottom: 17px;
+            margin-top: 4px;
         }
-        button{
+
+        button {
             height: 30px;
             width: 100%;
             margin-right: 5px;
-            color:black;
+            color: black;
             border-radius: 20px;
         }
-        .nav-link{
-            background-color:yellow;
+
+        .nav-link {
+            background-color: yellow;
             border-radius: 10px;
         }
-        span{
+
+        span {
             font-weight: bold;
         }
-        .num{
+
+        .num {
             width: 72%;
         }
-        a{
-           
+
+        a {
+
             text-decoration: none;
         }
-        p{
+
+        p {
             margin-top: -20px;
         }
-        .para{
+
+        .para {
             text-align: justify;
         }
-        .button1{
-            width:100%;
-            height:30px;
+
+        .button1 {
+            width: 100%;
+            height: 30px;
             background-color: yellow;
             color: black;
             text-align: bold;
-           }
-        hr{
+        }
+
+        hr {
             width: 100%;
         }
-        .footer{
+
+        .footer {
             display: flex;
             justify-content: space-between;
             font-size: 12px;
@@ -76,16 +94,18 @@
             width: 15%;
             margin-left: 45%;
         }
-        .copyright{
+
+        .copyright {
             font-size: 12px;
             margin-left: 44%;
         }
-        #ccode
-        {
-        height: 32px;
+
+        #ccode {
+            height: 32px;
         }
     </style>
 </head>
+
 <body class="container-fluid">
     <div class="image">
     </div>
@@ -112,20 +132,25 @@
                 <span>Password</span> <br><input type="password" required placeholder="At least 6 chachters">
             </div><br>
             <p><a href="#"><i class="bi bi-info"></i></a></i>Passwords must be at least 6 characters.</p>
-            <div class="para">To verify your number, we will send you a text<br> message with a temporary code. Message and<br>data rates may apply.</div>
-           <button> <a class="nav-link" href="bhartiyaculture.html">Continue</a></button>
+            <div class="para">To verify your number, we will send you a text<br> message with a temporary code. Message
+                and<br>data rates may apply.</div>
+            <button> <a class="nav-link" href="bhartiyaculture.html">Continue</a></button>
 
             <hr>
             <div>
-            <span>Buying for work?</span><br><br><a href="#"><br><p>Create a free business account</p></a>
+                <span>Buying for work?</span><br><br><a href="#"><br>
+                    <p>Create a free business account</p>
+                </a>
             </div>
             <hr><br>
             <p>Already have an acoount?<a href="#">Sign in</a></p><br>
-            <p>By creating an account or logging in, you agree to भारतीय Culture<br> <a href="#">Conditions of Use</a> and <a href="#">Privacy Policy.</a></p>
-           
+            <p>By creating an account or logging in, you agree to भारतीय Culture<br> <a href="#">Conditions of Use</a>
+                and <a href="#">Privacy Policy.</a></p>
+
         </form>
     </div>
-    <br><hr>
+    <br>
+    <hr>
     <div class="footer">
         <div>condition of Use</div>
         <div>Privacy Notice</div>
@@ -133,4 +158,5 @@
     </div><br>
     <div class="copyright">©2023-2024, भारतीयculture.com, Inc. or its affiliates</div>
 </body>
+
 </html>
