--- a/conditionofuse.html
+++ b/conditionofuse.html
@@ -1,127 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="public/images/bhartiyaculturesymbol.jpg" rel="shortcut icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <title>Condition Of Use</title>
     <style>
-         footer{
-                background-color: black;
-                color: white;
-                font-family: arial;
-                padding:20px;
-                margin-top: 70px;
-            }
-            .footer-main{
-               text-align: center;
-               margin: 100px;
-            }
-            .footer-main-title{
-               font-size: 30px;
-               margin:30px;
-              
-            }
-            .ft-input{
-               background-color: rgb(46, 44, 44);
-               height: 50px;
-               margin-right: 20px;
-               border: none;
-            }
+        footer {
+            background-color: black;
+            color: white;
+            font-family: arial;
+            padding: 20px;
+            margin-top: 70px;
+        }
 
-            .footer-btn{
-                background-color: gray;
-                color: white;
-                font-weight: bold;
-                font-size: 20px;
-            }
-            .footer-row{
-                display: grid;
-                grid-template-columns: 2.4fr 2.4fr 2.4fr 2.4fr 2.4fr;
-                padding: 20px;
-                font-family: arial;
+        .footer-main {
+            text-align: center;
+            margin: 100px;
+        }
 
-             }
-            .footer-brand-name{
-                font-weight: bold;
-                font-size:25px;
-                margin-bottom: 20px;
-            }
-            .footer-title{
-                font-weight: bold;
-                font-size: 15px;
-                margin-bottom: 20px;
-            }
-            .footer-title~span{
-                display: block;
-                margin-bottom: 10px;
-            }
+        .footer-main-title {
+            font-size: 30px;
+            margin: 30px;
+
+        }
+
+        .ft-input {
+            background-color: rgb(46, 44, 44);
+            height: 50px;
+            margin-right: 20px;
+            border: none;
+        }
+
+        .footer-btn {
+            background-color: gray;
+            color: white;
+            font-weight: bold;
+            font-size: 20px;
+        }
+
+        .footer-row {
+            display: grid;
+            grid-template-columns: 2.4fr 2.4fr 2.4fr 2.4fr 2.4fr;
+            padding: 20px;
+            font-family: arial;
+
+        }
+
+        .footer-brand-name {
+            font-weight: bold;
+            font-size: 25px;
+            margin-bottom: 20px;
+        }
+
+        .footer-title {
+            font-weight: bold;
+            font-size: 15px;
+            margin-bottom: 20px;
+        }
+
+        .footer-title~span {
+            display: block;
+            margin-bottom: 10px;
+        }
     </style>
 </head>
+
 <body>
     <header>
-<h5>Find more solution</h5>
-<div class="footer-main">
-    <div class="footer-main-title">Find more solution</div>
-    <div>
-        <span><input class="text" class="bi bi-search-heart-fill"></span>
-        <span><button class="footer-btn">Search</button></span>
-    </div>
+        <h5>Find more solution</h5>
+        <div class="footer-main">
+            <div class="footer-main-title">Find more solution</div>
+            <div>
+                <span><input class="text" class="bi bi-search-heart-fill"></span>
+                <span><button class="footer-btn">Search</button></span>
+            </div>
 
-</div>
+        </div>
     </header>
     <footer>
-            <div class="footer-main">
-                <div class="footer-main-title">Want style Ideas and Treats?</div>
-                <div>
-                    <span><input class="ft-input" placeholder="Enter Email*" size="50" type="gmail"></span>
-                    <span><button class="footer-btn">Submit</button></span>
-                </div>
-    
+        <div class="footer-main">
+            <div class="footer-main-title">Want style Ideas and Treats?</div>
+            <div>
+                <span><input class="ft-input" placeholder="Enter Email*" size="50" type="gmail"></span>
+                <span><button class="footer-btn">Submit</button></span>
             </div>
-            <div class="footer-row">
-                <div>
-                    <div class="footer-brand-name">भारतीय Culture</div>
-                    <aside>
-                        <span class="bi bi-facebook"></span>
-                        <span class="bi bi-youtube"></span>
-                        <span class="bi bi-twitter"></span>
-                        <span class="bi bi-instagram"></span>
-                        <span class="bi bi-linkedin"></span>
-                    </aside>
-                </div>
-                <div>
-                    <div class="footer-title">SUPPORT</div>
-                    <span>Contact Us</span>
-                    <span>FAQs</span>
-                    <span>Size Guide</span>
-                    <span>Shipping & Returns</span>
-                </div>
-                <div>
-                    <div class="footer-title">SHOP</div>
-                    <span>Groom Shopping</span>
-                    <span>Bright Shopping</span>
-                    <span>Couples Shopping</span>
-                    <span>Discounts</span>
-                </div>
-                <div>
-                    <div class="footer-title">COMPANY</div>
-                    <span>Our Story</span>
-                    <span>Careers</span>
-                    <span>Terms & Conditions</span>
-                    <span>Privacy & Cookie policy</span>
-                </div>
-                <div>
-                    <div class="footer-title">CONTACT</div>
-                    <span>+91-8517809277</span>
-                    <span>help@भारतीयCulture.com</span>
-                </div>
+
+        </div>
+        <div class="footer-row">
+            <div>
+                <div class="footer-brand-name">भारतीय Culture</div>
+                <aside>
+                    <span class="bi bi-facebook"></span>
+                    <span class="bi bi-youtube"></span>
+                    <span class="bi bi-twitter"></span>
+                    <span class="bi bi-instagram"></span>
+                    <span class="bi bi-linkedin"></span>
+                </aside>
             </div>
-         </footer>
-         <script src="../node_modules/jquery/dist/jquery.js"></script>
-         <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+            <div>
+                <div class="footer-title">SUPPORT</div>
+                <span>Contact Us</span>
+                <span>FAQs</span>
+                <span>Size Guide</span>
+                <span>Shipping & Returns</span>
+            </div>
+            <div>
+                <div class="footer-title">SHOP</div>
+                <span>Groom Shopping</span>
+                <span>Bright Shopping</span>
+                <span>Couples Shopping</span>
+                <span>Discounts</span>
+            </div>
+            <div>
+                <div class="footer-title">COMPANY</div>
+                <span>Our Story</span>
+                <span>Careers</span>
+                <span>Terms & Conditions</span>
+                <span>Privacy & Cookie policy</span>
+            </div>
+            <div>
+                <div class="footer-title">CONTACT</div>
+                <span>+91-8517809277</span>
+                <span>help@भारतीयCulture.com</span>
+            </div>
+        </div>
+    </footer>
+    <script src="../node_modules/jquery/dist/jquery.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
+
 </html>
