--- a/jsinputform.html
+++ b/jsinputform.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Input</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-   <script type="text/javascript">
-        function RegisterClick(){
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        function RegisterClick() {
 
             document.getElementById("detailsContainer").style.display = "block";
             document.getElementById("buttonContainer").style.display = "none";
@@ -20,8 +24,7 @@
             stockCheckBox = document.getElementById("optStock");
             stockStatus = "";
 
-            if(stockCheckBox.checked)
-            {
+            if (stockCheckBox.checked) {
                 stockStatus = "Available";
             } else {
                 stockStatus = "Out of Stock";
@@ -30,13 +33,14 @@
             document.getElementById("lblStock").innerHTML = stockStatus;
 
         }
-        function EditClick(){
+        function EditClick() {
             document.getElementById("lblTitle").innerHTML = "Edit Product";
             document.getElementById("btnRegister").innerHTML = "Save";
             document.getElementById("btnRegister").className = "btn btn-success";
         }
     </script>
 </head>
+
 <body class="container-fluid">
     <div id="buttonContainer" class="mt-4">
         <button class="btn btn-primary" data-bs-target="#register" data-bs-toggle="modal">Add Product</button>
@@ -64,12 +68,14 @@
                         </dd>
                         <dt>Stock</dt>
                         <dd class="form-switch">
-                            <input class="form-check-input" type="checkbox" id="optStock"> <label class="form-check-label">Available</label>
+                            <input class="form-check-input" type="checkbox" id="optStock"> <label
+                                class="form-check-label">Available</label>
                         </dd>
                     </dl>
                 </div>
                 <div class="modal-footer">
-                    <button data-bs-dismiss="modal" onclick="RegisterClick()" id="btnRegister" class="btn btn-primary">Register</button>
+                    <button data-bs-dismiss="modal" onclick="RegisterClick()" id="btnRegister"
+                        class="btn btn-primary">Register</button>
                     <button class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
                 </div>
             </div>
@@ -87,9 +93,11 @@
             <dt>Stock</dt>
             <dd id="lblStock"></dd>
         </dl>
-        <button onclick="EditClick()" data-bs-target="#register" data-bs-toggle="modal" class="btn btn-warning bi bi-pen-fill"> Edit </button>
+        <button onclick="EditClick()" data-bs-target="#register" data-bs-toggle="modal"
+            class="btn btn-warning bi bi-pen-fill"> Edit </button>
     </div>
     <script src="../node_modules/jquery/dist/jquery.js"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
+
 </html>
